
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 MAY 24a
  * in src/init.c
    - in reorder_initvar_species() and read_init_actions_fluid(), fixed a bug related 
      to the default species treatment. Also improved code so that the default species can be
      located anywhere within the species list, not just at the end of the species list.
       

2023 MAY 23a
  * in model/thermo/_generic/thermo.c
    - in _a_from_w_T_equilibrium(), added some debug info when (Rmix*cpmix*T/(cpmix-Rmix)<0
  * deleted model/chem/_N2_Plasma_3s_3r
  * added model/chem/_N2_Plasma_4s/
  * in model/share/fluid_share.c
    - in _w_product_at_catalytic_wall(), fixed a bug: when coeffwA==0, should return w at node lB
      thus added  "if (coeffwA==0.0) return(_w(np[lB],specP));"     
  * in tools/chemkin2cfdwarp.c
    - fixed a few bugs
    

2023 APR 27a
  * in tools/chemkin2cfdwarp.c
    - added capability to find electron excitation energy when not specified using the _exci_*() 
      functions
  * in model/chem/_Air_Plasma_11s/thoguluva2023.c
    - fixed some bugs related to the backward rates not being determined properly when setting 
      the BOLSIGREACTIONS flag to TRUE
      
    
2023 APR 25a
  * in model/thermo/_generic/enthalpy.c
    - fixed a mistake in the C2H4+ polynomial for the enthalpy
  * in model/share/chem_share.c
    - added functions _exci_2r2p(), _exci_2r3p(), _exci_2r4p()
  * in model/chem/_C2H4_Air_Plasma_36s/adamovich2023e.c
    - changed find_dQei_dx_Adamovich2023e() and find_Qei_Adamovich2023e() so that they obtain
      the excitation energy from _exci_2r2p(), _exci_2r3p(), _exci_2r4p()
      

2023 APR 21a
  * in model/chem/_C2H4_Air_Plasma_36s/
    - added adamovich2023e.c
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c