@@ -1,7 +1,6 @@
 // SPDX-License-Identifier: BSD-2-Clause
 /*
-Copyright 2018,2021 Bernard Parent
-Copyright 2021 Prasanna Thoguluva Rajendran
+Copyright 2018,2021,2023 Bernard Parent
 
 Redistribution and use in source and binary forms, with or without modification, are
 permitted provided that the following conditions are met:
@@ -30,9 +29,11 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include <model/share/chem_share.h>
 #include <src/control.h>
 #include "macheret2007.h"
+#include "parent2023b.h"
 
 #define CHEMMODEL_NONE 1
 #define CHEMMODEL_MACHERET2007 2
+#define CHEMMODEL_PARENT2023B 3
 
 
 #define Estarmin 1e-40
@@ -63,6 +64,7 @@ void read_model_chem_actions(char *actionname, char **argum, SOAP_codex_t *codex
     if (((readcontrolarg_t *)codex->action_args)->VERBOSE) wfprintf(stdout,"%s..",_CHEM_ACTIONNAME);
     SOAP_add_int_to_vars(codex,"CHEMMODEL_NONE",CHEMMODEL_NONE); 
     SOAP_add_int_to_vars(codex,"CHEMMODEL_MACHERET2007",CHEMMODEL_MACHERET2007); 
+    SOAP_add_int_to_vars(codex,"CHEMMODEL_PARENT2023B",CHEMMODEL_PARENT2023B); 
     gl->MODEL_CHEM_READ=TRUE;
 
     action_original=codex->action;
@@ -71,9 +73,9 @@ void read_model_chem_actions(char *actionname, char **argum, SOAP_codex_t *codex
     codex->action=action_original;
 
     find_int_var_from_codex(codex,"CHEMMODEL",&gl->model.chem.CHEMMODEL);
-    if (gl->model.chem.CHEMMODEL!=CHEMMODEL_MACHERET2007 
+    if (gl->model.chem.CHEMMODEL!=CHEMMODEL_MACHERET2007 && gl->model.chem.CHEMMODEL!=CHEMMODEL_PARENT2023B
         && gl->model.chem.CHEMMODEL!=CHEMMODEL_NONE)
-      SOAP_fatal_error(codex,"CHEMMODEL must be set to either CHEMMODEL_MACHERET2007 or CHEMMODEL_NONE.");
+      SOAP_fatal_error(codex,"CHEMMODEL must be set to either CHEMMODEL_MACHERET2007 or CHEMMODEL_PARENT2023B or CHEMMODEL_NONE.");
     find_bool_var_from_codex(codex,"QEISOURCETERMS",&gl->model.chem.QEISOURCETERMS);
 
     SOAP_clean_added_vars(codex,numvarsinit);
@@ -113,6 +115,9 @@ void find_W ( gl_t *gl, spec_t rhok, double T, double Te, double Tv, double Esta
     case CHEMMODEL_MACHERET2007: 
       find_W_Macheret2007 ( gl, rhok, T, Te, Tv, Estar, Qbeam, W );
     break;
+    case CHEMMODEL_PARENT2023B: 
+      find_W_Parent2023b ( gl, rhok, T, Te, Tv, Estar, Qbeam, W );
+    break;
     case CHEMMODEL_NONE: 
       find_W_None ( gl, rhok, T, Te, Tv, Estar, Qbeam, W );    
     break;
@@ -128,6 +133,9 @@ void find_dW_dx ( gl_t *gl, spec_t rhok, double T, double Te, double Tv,
   switch (gl->model.chem.CHEMMODEL){
     case CHEMMODEL_MACHERET2007: 
       find_dW_dx_Macheret2007 ( gl, rhok, T, Te, Tv, Estar, Qbeam, dWdrhok, dWdT, dWdTe, dWdTv, dWdQbeam );
+    break;
+    case CHEMMODEL_PARENT2023B: 
+      find_dW_dx_Parent2023b ( gl, rhok, T, Te, Tv, Estar, Qbeam, dWdrhok, dWdT, dWdTe, dWdTv, dWdQbeam );
     break;
     case CHEMMODEL_NONE: 
       find_dW_dx_None ( gl, rhok, T, Te, Tv, Estar, Qbeam, dWdrhok, dWdT, dWdTe, dWdTv, dWdQbeam );
@@ -145,6 +153,9 @@ void find_Qei(gl_t *gl, spec_t rhok, double Estar, double Te, double *Qei){
     switch (gl->model.chem.CHEMMODEL){
       case CHEMMODEL_MACHERET2007: 
         find_Qei_Macheret2007 ( gl, rhok, Estar, Te, Qei );
+      break;
+      case CHEMMODEL_PARENT2023B: 
+        find_Qei_Parent2023b ( gl, rhok, Estar, Te, Qei );
       break;
       case CHEMMODEL_NONE: 
         *Qei=0.0;
@@ -166,6 +177,9 @@ void find_dQei_dx(gl_t *gl, spec_t rhok, double Estar, double Te, spec_t dQeidrh
     switch (gl->model.chem.CHEMMODEL){
       case CHEMMODEL_MACHERET2007: 
         find_dQei_dx_Macheret2007 ( gl, rhok, Estar, Te, dQeidrhok, dQeidTe );
+      break;
+      case CHEMMODEL_PARENT2023B: 
+        find_dQei_dx_Parent2023b ( gl, rhok, Estar, Te, dQeidrhok, dQeidTe );
       break;
       case CHEMMODEL_NONE: 
         *dQeidTe=0.0;
