@@ -10,6 +10,46 @@
         booktitle = "NASA CR-2232",
         year = 1973,
         }
+@article{pf:2007:boyd,
+	Author = {Boyd,Iain D.},
+	Date-Added = {2020-07-29 14:25:18 -0700},
+	Date-Modified = {2020-07-29 14:25:31 -0700},
+	Doi = {10.1063/1.2771662},
+	Eprint = {https://doi.org/10.1063/1.2771662},
+	Journal = {Physics of Fluids},
+	Number = {9},
+	Pages = {096102},
+	Title = {Modeling of associative ionization reactions in hypersonic rarefied flows},
+	Url = {https://doi.org/10.1063/1.2771662},
+	Volume = {19},
+	Year = {2007}
+}
+@book{book:1990:park,
+        author = "Park, C.",
+        title = "Nonequilibrium Hypersonic Aerothermodynamics",
+        publisher = "Wiley, New-York",
+        year = 1990
+        }
+@article{jap:2021:abdoulanziz,
+        title={Low-energy electron impact dissociative recombination and vibrational transitions of N2+},
+        author={Abdoulanziz, A and Argentin, C and Laporta, V and Chakrabarti, K and Bultel, Arnaud and Tennyson, J and Schneider, IF and Mezei, J Zs},
+        journal={Journal of Applied Physics},
+        volume={129},
+        number={5},
+        pages={053303},
+        year={2021},
+        publisher={AIP Publishing LLC}
+        }
+@article{ps:2005:tarasenko,
+  title={High-power subnanosecond beams of runaway electrons generated in dense gases},
+  author={Tarasenko, Victor F and Yakovlenko, Sergei I},
+  journal={Physica scripta},
+  volume={72},
+  number={1},
+  pages={41},
+  year={2005},
+  publisher={IOP Publishing}
+}
 @conference{chem:jachimowsky,
         author = "Jachimowsky, C. J.",
         TITLE = "An Analytical Study of the Hydrogen-Air Reaction
